--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-flow-vue": "^1.0.0",
+    "babel-preset-react": "^6.24.1",
     "webpack": "^3.6.0"
   },
   "dependencies": {
-    "babel-runtime": "^6.26.0"
+    "babel-runtime": "^6.26.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   }
 }
