--- a/useBuiltIns/.babelrc
+++ b/useBuiltIns/.babelrc
@@ -12,7 +12,7 @@
         },
         "modules": false,
         "debug": true,
-        //"useBuiltIns": false,
+        "useBuiltIns": false,
         "include": [],
         "exclude": []
       }
@@ -21,7 +21,7 @@
   ,
   "plugins": [
     "transform-react-jsx",
-    //"transform-regenerator",
+   // "transform-regenerator",
     "transform-runtime"
   ]
 }
